apps/actual-horizon/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-horizon
  namespace: apps
  labels:
    app.kubernetes.io/name: actual-horizon
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: actual-horizon
  ports:
    - name: http
      port: 3001
      targetPort: access-http
      protocol: TCP
